// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WeatherIcon > should change size 1`] = `
<div>
  <img
    alt="heavysnow"
    height="50"
    width="50"
  />
</div>
`;

exports[`WeatherIcon > should render 1`] = `
<div>
  <img
    alt="clearsky_day"
    height="40"
    width="40"
  />
</div>
`;
